# rust-api-rocket-with-redis

./: docker-compose.yml  readme.md
cr8s/: Cargo.toml  Dockerfile  docker-compose.yml
cr8s/migrations/2023-11-14-153722_create_rustaceans/: up.sql
cr8s/migrations/2023-11-14-153727_create_crates/: up.sql
cr8s/src/: main.rs  models.rs  repositories.rs
cr8s/src/rocket_routes/: crates.rs  mod.rs  rustaceans.rs
cr8s/tests/: crates.rs  rustaceans.rs
cr8s/tests/common/: mod.rs
