[package]
name = "cr8s"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Chrono is the feature that can manipulate with time
[dependencies]
serde = { version = "1.0", features = [
	"derive",
] } # support for deriving serialize the objects (json)
diesel = { version = "2.0", features = ["postgres", "chrono"] }
chrono = { version = "0.4", features = [
	"serde",
] } # Deserialize support for objects (json)
rocket = { version = "0.5.0-rc", features = ["json"] }
